--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer base {
+  section {
+    width: 95%;
+    height: 100vh;
+  }
+  body {
+    font-family: "Roboto", sans-serif;
+  }
+  .background {
+    background: url(./images/rectangle1.png) no-repeat,
+      url(./images/rectangle2.png) no-repeat;
+    background-position: bottom -3% right -5%;
+    background-size: contain;
+  }
+  .dotred{
+      background: #456BD9;
+  border: 0.1875em solid #0F1C3F;
+  border-radius: 50%;
+  box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125);
+  height: 5em;
+  width: 5em;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  }
+  @media screen and (min-width: 768px) {
+    .background{
+      background: url(./images/pic1.png), url(./images/pic2.png);
+       background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: top right -40%, bottom right 40%;
+background-size: auto;
+    }
+  }
 }
