--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  section {
-    width: 95%;
-    height: 100vh;
-  }
   body {
     font-family: "Roboto", sans-serif;
   }
@@ -16,21 +12,21 @@
     background-position: bottom -3% right -5%;
     background-size: contain;
   }
-  .dotred{
-      background: #456BD9;
-  border: 0.1875em solid #0F1C3F;
-  border-radius: 50%;
-  box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125);
-  height: 5em;
-  width: 5em;
-
+  .dotred {
+    background: #456bd9;
+    border: 0.1875em solid #0f1c3f;
+    border-radius: 50%;
+    box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125);
+    height: 5em;
+    width: 5em;
   }
+  
   @media screen and (min-width: 768px) {
-    .background{
+    .background {
       background: url(./images/pic1.png), url(./images/pic2.png);
-       background-repeat: no-repeat, no-repeat, no-repeat;
-  background-position: top right -40%, bottom right 40%;
-background-size: auto;
+      background-repeat: no-repeat, no-repeat, no-repeat;
+      background-position: top right -43%, bottom right 40%;
+      background-size: auto;
     }
   }
 }
