--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,13 @@
 @layer base {
   body {
     font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
   }
   .background {
     background: url(./images/rectangle1.png) no-repeat,
       url(./images/rectangle2.png) no-repeat;
     background-position: bottom -3% right -5%;
     background-size: contain;
-  }
-  .dotred {
-    background: #456bd9;
-    border: 0.1875em solid #0f1c3f;
-    border-radius: 50%;
-    box-shadow: 0.375em 0.375em 0 0 rgba(15, 28, 63, 0.125);
-    height: 5em;
-    width: 5em;
   }
   
   @media screen and (min-width: 768px) {
@@ -28,5 +21,7 @@
       background-position: top right -43%, bottom right 40%;
       background-size: auto;
     }
+    
   }
+  
 }
